src/styles/global.css
/*
  The CSS in this style tag is based off of Bear Blog's default CSS.
  https://github.com/HermanMartinus/bearblog/blob/297026a877bc2ab2b3bdfbd6b9f7961c350917dd/templates/styles/blog/default.css
  License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
 */
@import './font.css';
@import './theme.css';

::-webkit-scrollbar {
  @apply h-1.5 w-1.5;
}

::-webkit-scrollbar-track {
  @apply border-rd-1 bg-transparent;
}

::-webkit-scrollbar-thumb {
  @apply bg-sb-thumb border-rd-1;
}

@property --clip-size {
  syntax: '<length>';
  initial-value: 9999px;
  inherits: false;
}

::view-transition-old(root),
::view-transition-new(root) {
  animation: none;
  mix-blend-mode: normal;
}

::view-transition-old(root),
.dark::view-transition-new(root) {
  z-index: 1;
}

::view-transition-new(root),
.dark::view-transition-old(root) {
  z-index: 9999;
}

.theme-clip::view-transition-old(root),
.theme-clip::view-transition-new(root) {
  -webkit-mask-image: radial-gradient(
    circle at var(--tx, 50%) var(--ty, 50%),
    #000 max(0px, calc(var(--clip-size) - 5rem)),
    transparent var(--clip-size)
  );
  mask-image: radial-gradient(
    circle at var(--tx, 50%) var(--ty, 50%),
    #000 max(0px, calc(var(--clip-size) - 5rem)),
    transparent var(--clip-size)
  );
}

/* Disable all other view transition when switching theme colors */
.theme-clip * {
  view-transition-name: none !important;
}

html {
  overflow-y: scroll;

  background: var(--bg-grid-color);

  @apply m-0 p-0;
}

body {
  font-family: 'Atkinson', sans-serif;

  @apply color-text overflow-x-hidden text-4 line-height-relaxed m-0 p-0 break-words;

  /* background-image:
    linear-gradient(
      0deg,
      transparent 24%,
      var(--bg-grid-color) 25%,
      var(--bg-grid-color) 26%,
      transparent 27%,
      transparent 74%,
      var(--bg-grid-color) 75%,
      var(--bg-grid-color) 76%,
      transparent 77%,
      transparent
    ),
    linear-gradient(
      90deg,
      transparent 24%,
      var(--bg-grid-color) 25%,
      var(--bg-grid-color) 26%,
      transparent 27%,
      transparent 74%,
      var(--bg-grid-color) 75%,
      var(--bg-grid-color) 76%,
      transparent 77%,
      transparent
    );
  background-size: 55px 55px; */
}
main {
  width: 720px;
  max-width: calc(100% - 2em);
  margin: auto;
  padding: 3em 1em;
  background: transparent;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  @apply: font-poetsen-one color-title m-b-2 line-height-tight;
}
h1 {
  font-size: 3.052em;
}
h2 {
  font-size: 2.441em;
}
h3 {
  font-size: 1.953em;
}
h4 {
  font-size: 1.563em;
}
h5 {
  font-size: 1.25em;
}
strong,
b {
  font-weight: 700;
}
a {
  @apply: color-link;
}
a:hover {
  @apply: color-link;
}
p {
  margin-bottom: 1em;
  @apply: color-text;
}
.prose p {
  margin-bottom: 2em;
}
textarea {
  width: 100%;
  font-size: 16px;
}
input {
  font-size: 16px;
}
table {
  width: 100%;
}
img {
  max-width: 100%;
  height: auto;
  border-radius: 8px;
}
code {
  padding: 2px 5px;
  background-color: var(--bg-grid-color);
  border-radius: 2px;
}
pre {
  padding: 1.5em;
  border-radius: 8px;
}
pre > code {
  all: unset;
}
blockquote {
  border-left: 4px solid var(--accent);
  padding: 0 0 0 20px;
  margin: 0px;
  font-size: 1.333em;
}
hr {
  @apply border-none border-top-1 border-color-text border-solid;
}

img {
  @apply select-none;
}
@media (max-width: 720px) {
  body {
    font-size: 18px;
  }
  main {
    padding: 1em;
  }
}

*::selection {
  @apply color-text bg-selection;
}

.roll-link {
  display: inline-flex;
  gap: 0.01em;
  text-decoration: none;
  line-height: 1.2;
}

.char-wrap {
  position: relative;
  display: inline-block;
  overflow: hidden;
  height: 1lh;
  vertical-align: baseline;
}

.char,
.char-next {
  display: block;
  line-height: inherit;
  transition: transform 0.35s cubic-bezier(0.22, 1, 0.36, 1);
  transition-delay: calc(var(--i) * 30ms);
}

.char-next {
  position: absolute;
  left: 0;
  top: 100%;
  user-select: none;
}

/* .roll-link:hover .char,
.roll-link:focus-visible .char {
  transform: translateY(-100%);
}

.roll-link:hover .char-next,
.roll-link:focus-visible .char-next {
  transform: translateY(-100%);
} */

